--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+    "homepage": "https://plmohamed.github.io/Micro-Blog",
     "name": "micro-blog",
     "version": "0.1.0",
     "private": true,
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d out",
         "dev": "next dev",
-        "build": "next build",
+        "build": "next build && next export",
         "start": "next start",
         "lint": "next lint"
     },
@@ -16,6 +19,7 @@
     },
     "devDependencies": {
         "eslint": "^8",
-        "eslint-config-next": "14.1.0"
+        "eslint-config-next": "14.1.0",
+        "gh-pages": "^6.1.1"
     }
 }
