--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "predeploy": "npm run build",
         "deploy": "gh-pages -d .next/static",
         "dev": "next dev",
-        "build": "next build && next export",
+        "build": "next build",
         "start": "next start",
         "lint": "next lint"
     },
