--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,16 @@
 
 # next.js
 /.next/
-/out/
+/public/
+/src/
+jsconfig.json
+next.config.js
+package.json
+package-lock.json
+.eslintrc.json
+README.md
+.gitignore
+
 
 # production
 /build
